# py-bife

./: .gitignore  Dockerfile  README.md  pyproject.toml  run-local.py  run.py
py_bife/: __init__.py  config.py  myconfig.py
py_bife/application/: message_api.py  message_schema.py  user_api.py  user_schema.py
py_bife/database/: database.py
py_bife/model/: message.py  message_command.py  user.py  user_command.py
