[tool.poetry]
name = "py-bife"
version = "0.1.0"
description = ""
authors = ["Juan Knebel <juanknebel@gmail.com>"]
license = "LGPL"
readme = "README.md"
packages = [{include = "py_bife"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy-serializer = "^1.4.1"
schematics = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
